# retail-radar

./: .env.example  .gitignore  README.md  pyproject.toml
src/trend_engine/: analyze.py  cli.py  orchestrator.py  regions.py  report.py  storage.py
src/trend_engine/sources/: autocomplete.py  base.py  google_trends.py  reddit.py
